--- a/data/site.config.json
+++ b/data/site.config.json
@@ -1,17 +1,41 @@
 {
   "name": "Kai",
   "title": "Developer & Builder",
-  "tagline": "I like to build kind of cool and funny stuff.",
-  "description": "Full-stack developer passionate about creating delightful digital experiences.",
+  "tagline": "I like to build kind of cool and fun stuff.",
+  "description": "A free spirit passionate about creating captivating experiences.",
   "navigation": [
-    { "label": "Home", "href": "/" },
-    { "label": "Projects", "href": "/#projects" },
-    { "label": "About", "href": "/about" },
-    { "label": "Contact", "href": "/contact" }
+    {
+      "label": "Home",
+      "href": "/"
+    },
+    {
+      "label": "Projects",
+      "href": "/#projects"
+    },
+    {
+      "label": "About",
+      "href": "/about"
+    },
+    {
+      "label": "Contact",
+      "href": "/contact"
+    }
   ],
   "socialLinks": [
-    { "name": "GitHub", "url": "https://github.com", "icon": "github" },
-    { "name": "Twitter", "url": "https://twitter.com", "icon": "twitter" },
-    { "name": "LinkedIn", "url": "https://linkedin.com", "icon": "linkedin" }
+    {
+      "name": "GitHub",
+      "url": "https://github.com/uyu77777",
+      "icon": "github"
+    },
+    {
+      "name": "Twitter",
+      "url": "https://twitter.com",
+      "icon": "twitter"
+    },
+    {
+      "name": "LinkedIn",
+      "url": "https://linkedin.com",
+      "icon": "linkedin"
+    }
   ]
 }
